--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,17 @@
 
 {% block content %}
     <div class="jumbotron">
-    <h3 class="display-4">Bienvenido a JECKA1997</h3>
-    <p class="lead">Desarrollo web para el aprendizaje personal</p>
-    <hr class="my-4">
-    <p>Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Aprende Mas</a>
+        <div class="row">
+            <div class="align-content-center">    
+                <h3 class="display-4 pb-2">Bienvenido a JECKA1997</h3>
+                <p class="lead">Desarrollo web para el aprendizaje personal</p>
+                <hr class="my-4 ml-0">
+                <p class="my-3">Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
+                <a class="mx-3 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
+                <a class="mx-3 btn btn-success btn-lg" href="#" >Registrame</a></div>
+            <div>
+                <img class="mx-md-5 my-2" src="{{url_for('static', filename='images/home.gif')}}" width="330px" height="270px">
+            </div>
+        </div>
     </div>
 {% endblock %}
