desarrollo de la navegacion

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,19 +1,19 @@
 {% extends "layout.html" %}
 
 {% block content2 %}
-<title>JECKA1997</title>  
+<title>Contacto-JECKA1997</title>  
 {% endblock %}
 
 {% block cuerpo %}
     <div class="jumbotron">
         <div class="row">
             <div class="align-content-center">    
-                <h3 class="display-4 pb-2">Bienvenido a JECKA1997</h3>
+                <h3 class="display-4 pb-2">contacto</h3>
                 <p class="lead">Desarrollo web para el aprendizaje personal</p>
-                <hr class="my-2 ml-0">
-                <p class="my-2">Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
-                <a class="mx-2 my-2 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
-                <a class="mx-2 my-2 btn btn-success btn-lg" href="#" >Registrame</a></div>
+                <hr class="my-4 ml-0">
+                <p class="my-3">Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
+                <a class="mx-2 my-3 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
+                <a class="mx-2 my-3 btn btn-success btn-lg" href="#" >Registrame</a></div>
             <div>
                 <img class="mx-md-5 my-2" src="{{url_for('static', filename='images/home.gif')}}" width="330px" height="270px">
             </div>
