--- a/templates/diseños.html
+++ b/templates/diseños.html
@@ -1,21 +1,21 @@
 {% extends "layout.html" %}
 
 {% block content2 %}
-<title>About-JECKA1997</title>  
+<title>Diseños-JECKA1997</title>  
 {% endblock %}
 
 {% block cuerpo %}
     <div class="jumbotron">
         <div class="row">
             <div class="align-content-center">    
-                <h3 class=" display-4 pb-2">JECKA1997.COM</h3>
-                <p class="lead">Organizacion web dirigida por jesus canul jecka</p>
+                <h4 class="display-4 pb-2">Explora nuestros diseños</h4>
+                <p class="lead">Desarrollo web para el aprendizaje personal</p>
                 <hr class="my-4 ml-0">
-                <p class="my-3">El aprendizaje es la base del exito a futuro, JECKA1997.COM es la iniciativa de emprendimiento.</p>
+                <p class="my-3">Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
                 <a class="mx-2 my-3 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
                 <a class="mx-2 my-3 btn btn-success btn-lg" href="#" >Registrame</a></div>
             <div>
-                <img class="mx-md-5 my-2" src="{{url_for('static', filename='images/escorpion-logo.ico')}}" width="300px" height="280px">
+                <img class="mx-md-5 my-2" src="{{url_for('static', filename='images/home.gif')}}" width="320px" height="280px">
             </div>
         </div>
     </div>
