--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,13 +1,67 @@
+html {
+  font-size: 15px; }
 body{
-background: #000046; 
-background: -webkit-linear-gradient(to right, #000, #000046); 
-background: linear-gradient(to right, #000, #000046);
+  background: #000046; 
+  background: -webkit-linear-gradient(to right, #000, #225c0b); 
+  background: linear-gradient(to right, #000, #225c0b);
 }
 .btn-primary:hover{
     background-color: rgb(14, 14, 14);
     color:#007bff;
 }
 .btn-success:hover{
-    background-color: rgb(14, 14, 14);
-    color: #28a745;
+  background-color: rgb(14, 14, 14);
+  color: #28a745;
 }
+
+.navbar-fixed-top {
+  background: rgba(82, 43, 223, 0.85); 
+  margin:0px;
+  border:none;
+  padding:0px;
+}
+
+.navbar-light .navbar-brand {
+  color: #fdfdfd;
+  font-size: 1.3rem;
+  text-transform: uppercase; }
+
+.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
+  color: rgba(255, 255, 255, 0.98); }
+
+.navbar-toggler {
+  font-size: 1.6rem;
+  color: #fff !important; }
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+  text-align: center;
+  padding: .5rem;
+  text-transform: uppercase; }
+
+.navbar-light .navbar-nav .open > .nav-link, .navbar-light .navbar-nav .open > .nav-link:focus, .navbar-light .navbar-nav .open > .nav-link:hover, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .active > .nav-link:focus, .navbar-light .navbar-nav .active > .nav-link:hover, .navbar-light .navbar-nav .nav-link.open, .navbar-light .navbar-nav .nav-link.open:focus, .navbar-light .navbar-nav .nav-link.open:hover, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.active:focus, .navbar-light .navbar-nav .nav-link.active:hover {
+  color: rgba(255, 255, 255, 0.95);
+  background:#2A487E; 
+ }
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color: white;
+  background: #2A487E; 
+}
+
+#menuprincipal {
+  clear: both; 
+  border:0px;
+}
+
+
+
+/*EMPIEZAN LOS MEDIAS QUERIES*/
+@media (min-width: 768px) {
+  html {
+    font-size: 16px; }
+
+  #menuprincipal {
+    clear: inherit; }
+
+  }
