--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
-    <!--Bootstrap 4-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<html lang="es">
+  <head>
+		<!-- Required meta tags always come first -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}">
+		<!-- Carga de fuentes de Font  Awesome -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/all.css')}}">
     <!-- Estilos personalizados-->
     <link rel="stylesheet" href="{{url_for('static', filename='css/home.css')}}">
-    
-</head>
-<body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-                <a class="navbar-brand" href="#">PythonWeb-JECKA1997</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{url_for('acerca')}}">Acerca</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-    <div class="container py-3">
-        {% block content %}
-        {% endblock %}
-    </div>          
 
-</body>
+    <!-- Carga de titulo e imagen de icono de pestaña -->
+    {% block content2 %}
+    <!--En este contenido se estableceran los titulos-->
+    {% endblock %}
+		<link rel="icon" type="image/ico" href="{{url_for('static', filename='images/escorpion-logo.ico')}}">
+
+  </head>
+
+  <body>
+
+		<section class="bienvenidos">
+			<header class="encabezado">
+				<nav class="navbar navbar-light navbar-fixed-top">
+					<div class="container">
+						<button class="navbar-toggler hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#menuprincipal">
+						&#9776;
+						</button>
+						<a class="navbar-brand" href="/">JECKA1997.com</a>
+						<div class="collapse navbar-toggleable-sm float-md-right" id="menuprincipal">
+
+							<ul class="nav navbar-nav">
+								<li class="nav-item">
+									<a class="nav-link" href="/">Inicio</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{url_for('diseños')}}">Diseños</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{url_for('acerca')}}">Acerca</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{url_for('contacto')}}">Contacto</a>
+								</li>								
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</header>
+      <div class="container py-3">
+        {% block cuerpo %}
+        {% endblock %}
+      </div> 
+
+		<!-- jQuery first, then Tether, then Bootstrap JS. -->
+		<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+		<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+
+  </body>
 </html>
