--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,10 +1,9 @@
 html {
   font-size: 15px; }
 body{
-  background: #000046; 
-  background: -webkit-linear-gradient(to right, #000, #225c0b); 
-  background: linear-gradient(to right, #000, #225c0b);
+  background-color:#fff;
 }
+/* Clases de navegacion en layout*/
 .btn-primary:hover{
     background-color: rgb(14, 14, 14);
     color:#007bff;
@@ -13,24 +12,27 @@ body{
   background-color: rgb(14, 14, 14);
   color: #28a745;
 }
-
 .navbar-fixed-top {
-  background: rgba(82, 43, 223, 0.85); 
+  background: rgba(3, 3, 3, 0.85); 
   margin:0px;
   border:none;
   padding:0px;
 }
-
 .navbar-light .navbar-brand {
   color: #fdfdfd;
   font-size: 1.3rem;
-  text-transform: uppercase; }
-
+  padding-right: .5rem;
+  padding-left: .5rem;
+  text-transform: uppercase;
+}
 .navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
-  color: rgba(255, 255, 255, 0.98); }
+  color: rgba(255, 255, 255, 0.98);
+  padding-right: .5rem;
+  padding-left: .5rem;
+  background-color: #2A487E; }
 
 .navbar-toggler {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   color: #fff !important; }
 
 .navbar-light .navbar-nav .nav-link {
@@ -48,13 +50,27 @@ body{
   color: white;
   background: #2A487E; 
 }
-
 #menuprincipal {
   clear: both; 
   border:0px;
 }
+/*fin Clases de navegacion en layout*/
 
-
+/*estilos de home*/
+.home-text{
+color:#000;
+font-weight:300px;
+}
+.home-img{
+  background-image: url(../images/home.gif);
+  width:100vh;
+  height: 60vh;
+  padding: 0; 
+}
+hr{
+  margin: 2px #fff;
+}
+/*fin estilos de home*/
 
 /*EMPIEZAN LOS MEDIAS QUERIES*/
 @media (min-width: 768px) {
@@ -62,6 +78,7 @@ body{
     font-size: 16px; }
 
   #menuprincipal {
-    clear: inherit; }
-
+    clear: inherit; 
   }
+
+}
