--- a/templates/home.html
+++ b/templates/home.html
@@ -5,18 +5,21 @@
 {% endblock %}
 
 {% block cuerpo %}
-    <div class="jumbotron">
-        <div class="row">
-            <div class="align-content-center">    
-                <h3 class="display-4 pb-2">Bienvenido a JECKA1997</h3>
-                <p class="lead">Desarrollo web para el aprendizaje personal</p>
-                <hr class="my-2 ml-0">
-                <p class="my-2">Explora mas de  nuestro trabajo de desarrollo web con python utilizando el framework flask.</p>
-                <a class="mx-2 my-2 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
-                <a class="mx-2 my-2 btn btn-success btn-lg" href="#" >Registrame</a></div>
-            <div>
-                <img class="mx-md-5 my-2" src="{{url_for('static', filename='images/home.gif')}}" width="330px" height="270px">
-            </div>
+<div class="row my-4">
+    <div class="col-md-8 home-text">
+        <div class="text-xs-center">
+            <h3 class=" display-4 pb-2">JECKA1997</h3>
+            <p class="lead">Organizacion web dirigida por jesus canul jecka</p>
+            <hr class="my-4 ml-0">
+            <p class="my-3">El aprendizaje es la base del exito a futuro, JECKA1997.COM es la iniciativa de emprendimiento.</p>
+            <a class="mx-2 my-2 btn btn-primary btn-lg" href="#">Iniciar sesion</a>
+            <a class="my-2 btn btn-success btn-lg" href="#" >Registrame</a> 
         </div>
     </div>
+    <div class="col-md-4 home-img text-xs-center mx-auto">
+        <!--imagen definia en CSS por la clase .home-img -->
+    </div>
+</div>
+        
 {% endblock %}
+        
