--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-		<!-- Required meta tags always come first -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<!-- Required meta tags always come first -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}">
-		<!-- Carga de fuentes de Font  Awesome -->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/all.css')}}">
-    <!-- Estilos personalizados-->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/home.css')}}">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}">
+	<!-- Carga de fuentes de Font  Awesome -->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/all.css')}}">
+	<!-- Estilos personalizados-->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/home.css')}}">
 
-    <!-- Carga de titulo e imagen de icono de pestaña -->
-    {% block content2 %}
-    <!--En este contenido se estableceran los titulos-->
-    {% endblock %}
-		<link rel="icon" type="image/ico" href="{{url_for('static', filename='images/escorpion-logo.ico')}}">
+	<!-- Carga de titulo e imagen de icono de pestaña -->
+	{% block content2 %}
+	<!--En este contenido se estableceran los titulos-->
+	{% endblock %}
+	<link rel="icon" type="image/ico" href="{{url_for('static', filename='images/escorpion-logo.ico')}}">
 
   </head>
 
   <body>
+	<section class="bienvenidos">
+		<header class="encabezado">
+			<nav class="navbar navbar-light navbar-fixed-top">
+				<div class="contain">
+					<button class="navbar-toggler hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#menuprincipal">
+					&#9776;
+					</button>
+					<a class="navbar-brand" href="/"> JECKA1997.com</a>
+					<div class="collapse navbar-toggleable-sm float-md-right" id="menuprincipal">
 
-		<section class="bienvenidos">
-			<header class="encabezado">
-				<nav class="navbar navbar-light navbar-fixed-top">
-					<div class="container">
-						<button class="navbar-toggler hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#menuprincipal">
-						&#9776;
-						</button>
-						<a class="navbar-brand" href="/">JECKA1997.com</a>
-						<div class="collapse navbar-toggleable-sm float-md-right" id="menuprincipal">
-
-							<ul class="nav navbar-nav">
-								<li class="nav-item">
-									<a class="nav-link" href="/">Inicio</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="{{url_for('diseños')}}">Diseños</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="{{url_for('acerca')}}">Acerca</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="{{url_for('contacto')}}">Contacto</a>
-								</li>								
-							</ul>
-						</div>
+						<ul class="nav navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="/">Inicio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{url_for('acerca')}}">Acerca</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{url_for('contacto')}}">Contacto</a>
+							</li>								
+						</ul>
 					</div>
-				</nav>
-			</header>
-      <div class="container py-3">
-        {% block cuerpo %}
-        {% endblock %}
-      </div> 
+				</div>
+			</nav>
+		</header>
+	</section>
+	<div class="container my-3">
+	{% block cuerpo %}
+	{% endblock %}
+	</div> 
 
-		<!-- jQuery first, then Tether, then Bootstrap JS. -->
-		<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-		<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+	<!-- jQuery first, then Tether, then Bootstrap JS. -->
+	<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+	<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
   </body>
 </html>
