--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,32 +22,23 @@
   </head>
 
   <body>
-	<section class="bienvenidos">
 		<header class="encabezado">
 			<nav class="navbar navbar-light navbar-fixed-top">
 				<div class="contain">
 					<button class="navbar-toggler hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#menuprincipal">
 					&#9776;
 					</button>
-					<a class="navbar-brand" href="/"> JECKA1997.com</a>
+					<a class="navbar-brand" href="/">JECKA1997.com</a>
 					<div class="collapse navbar-toggleable-sm float-md-right" id="menuprincipal">
-
 						<ul class="nav navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="/">Inicio</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{{url_for('acerca')}}">Acerca</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{{url_for('contacto')}}">Contacto</a>
-							</li>								
+							{% block itenNav %}
+							{% endblock %}							
 						</ul>
 					</div>
 				</div>
 			</nav>
 		</header>
-	</section>
+
 	<div class="container my-3">
 	{% block cuerpo %}
 	{% endblock %}
