--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 
 {% block cuerpo %}
 
-<div class="row my-3">
+<div class="row mt-3">
     <div class="col-md-8 home-text">
         <div class="text-xs-center">
             <h1 class="display-4 py-3">BIENVENIDOS A JECKA1997</h1>
