--- a/templates/diseños.html
+++ b/templates/diseños.html
@@ -1,72 +1,123 @@
 {% extends "layout.html" %} {% block content2 %}
 <title>Diseños-JECKA1997</title>
 <!-- Estilos personalizados para deseños.html-->
-<link
-  rel="stylesheet"
-  href="{{url_for('static', filename='css/disenos.css')}}"
-/>
-{% endblock %} {% block itenNav %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/disenos.css')}}" />
+<!-- Estilos personalizados para a1: botones dark -->
+<link rel="stylesheet" href="{{url_for('static', filename='css/a1.css')}}" /> {% endblock %} {% block itenNav %}
 <li class="nav-item">
-  <a class="nav-link" href="/">Inicio</a>
+    <a class="nav-link" href="/">Inicio</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" href="{{ url_for('diseños') }}">Diseños</a>
+    <a class="nav-link active" href="{{ url_for('diseños') }}">Diseños</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{{ url_for('acerca') }}">Acerca</a>
+    <a class="nav-link" href="{{ url_for('acerca') }}">Acerca</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{{ url_for('contacto') }}">Contacto</a>
+    <a class="nav-link" href="{{ url_for('contacto') }}">Contacto</a>
 </li>
-{% endblock %} 
-{% block cuerpo2 %}
+{% endblock %} {% block cuerpo2 %}
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'p')">.</button>
-  <button class="tablinks" onclick="openTab(event, 'a1')" id="defaultOpen">Botones Dark</button>
-  <button class="tablinks" onclick="openTab(event, 'a2')">Botones wtf</button>
-  <button class="tablinks" onclick="openTab(event, 'a3')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'p')">.</button>
+    <button class="tablinks" onclick="openTab(event, 'a2')">Colorfull Dark</button>
+    <button class="tablinks" onclick="openTab(event, 'a1'id=" defaultOpen ")">Alto Contraste</button>
+    <button class="tablinks" onclick="openTab(event, 'a3')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a4')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a5')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a6')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a7')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a8')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a9')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a10')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a11')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a12')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a13')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a14')">Botones wtf</button>
+    <button class="tablinks" onclick="openTab(event, 'a15')">Botones xp</button>
 </div>
+
+
 
 <div id="a1" class="tabcontent text-xs-center">
-  <h3>DARK BUTTON</h3>
-   <div class="row">
-    <div class="col-md-4">
-      <p>Hola</p>
+    <h3>BOTONES ALTO CONTRASTE</h3>
+    <div class="row">
+        <div class="col-md-3">
+            <a><button class="btn a1-bck a1-1-1">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-2">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-3">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-4">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-5">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-6">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-7">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-8">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-1-9">BOTON #FF0000</button></a>
+            <a><button class="btn a1-bck a1-1-10">BOTON #FFFF00</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a1-bck a1-2-1">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-2">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-3">BOTON #00FFFF</button></a>
+            <a><button class="btn a1-bck a1-2-4">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-5">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-6">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-7">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-8">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-9">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-10">Boton dark yellow</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a1-bck a1-3-1">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-2">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-3">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-4">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-5">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-6">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-7">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-8">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-9">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-10">Boton dark yellow</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a1-bck a1-4-1">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-2">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-3">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-4">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-5">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-6">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-7">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-8">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-9">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-10">Boton dark yellow</button></a>
+
+        </div>
     </div>
-    <div class="col-md-4">
-      <p>Hola</p>
-    </div>
-    <div class="col-md-4">
-      <p>Hola</p>
-    </div>
-</div>
 </div>
 
-<div id="a2" class="tabcontent">
-  <h3>Animacion 2</h3>
+<div id="a2" class="tabcontent text-xs-center">
+    <h3>BOTONES COLORFULL DARK</h3>
 </div>
 
 <div id="a3" class="tabcontent">
-  <h3>Animacion 3</h3>
+    <h3>Animacion 3</h3>
 </div>
 
 <!--escript para busqueda de opciones-->
 <script>
-  function openTab(evt, Name) {
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display = "none";
+    function openTab(evt, Name) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace("active", "");
+        }
+        document.getElementById(Name).style.display = "block";
+        evt.currentTarget.className += " active";
     }
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace("active", "");
-    }
-    document.getElementById(Name).style.display = "block";
-    evt.currentTarget.className += " active";
-  }
 
-  // Get the element with id="defaultOpen" and click on it
-  document.getElementById("defaultOpen").click();
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
 </script>
-{% endblock %}
+{% endblock %}a1-bck
