--- a/templates/diseños.html
+++ b/templates/diseños.html
@@ -3,7 +3,9 @@
 <!-- Estilos personalizados para deseños.html-->
 <link rel="stylesheet" href="{{url_for('static', filename='css/disenos.css')}}" />
 <!-- Estilos personalizados para a1: botones dark -->
-<link rel="stylesheet" href="{{url_for('static', filename='css/a1.css')}}" /> {% endblock %} {% block itenNav %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/a1.css')}}" />
+<!-- Estilos personalizados para a2: colorfull dark -->
+<link rel="stylesheet" href="{{url_for('static', filename='css/a2.css')}}" /> {% endblock %} {% block itenNav %}
 <li class="nav-item">
     <a class="nav-link" href="/">Inicio</a>
 </li>
@@ -19,8 +21,8 @@
 {% endblock %} {% block cuerpo2 %}
 <div class="tab">
     <button class="tablinks" onclick="openTab(event, 'p')">.</button>
-    <button class="tablinks" onclick="openTab(event, 'a2')">Colorfull Dark</button>
-    <button class="tablinks" onclick="openTab(event, 'a1'id=" defaultOpen ")">Alto Contraste</button>
+    <button class="tablinks" onclick="openTab(event, 'a2')" id="defaultOpen">Colorfull Dark</button>
+    <button class="tablinks" onclick="openTab(event, 'a1')">Alto Contraste</button>
     <button class="tablinks" onclick="openTab(event, 'a3')">Botones wtf</button>
     <button class="tablinks" onclick="openTab(event, 'a4')">Botones wtf</button>
     <button class="tablinks" onclick="openTab(event, 'a5')">Botones wtf</button>
@@ -42,52 +44,52 @@
     <h3>BOTONES ALTO CONTRASTE</h3>
     <div class="row">
         <div class="col-md-3">
-            <a><button class="btn a1-bck a1-1-1">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-2">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-3">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-4">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-5">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-6">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-7">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-8">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-1-9">BOTON #FF0000</button></a>
-            <a><button class="btn a1-bck a1-1-10">BOTON #FFFF00</button></a>
+            <a><button class="btn a1-bck a1-1-1">#FF8080</button></a>
+            <a><button class="btn a1-bck a1-1-2">#FFFF80</button></a>
+            <a><button class="btn a1-bck a1-1-3">#80FF80</button></a>
+            <a><button class="btn a1-bck a1-1-4">#00FF80</button></a>
+            <a><button class="btn a1-bck a1-1-5">#80FFFF</button></a>
+            <a><button class="btn a1-bck a1-1-6">#0080FF</button></a>
+            <a><button class="btn a1-bck a1-1-7">#FF80C0</button></a>
+            <a><button class="btn a1-bck a1-1-8">#FF80FF</button></a>
+            <a><button class="btn a1-bck a1-1-9">#FF0000</button></a>
+            <a><button class="btn a1-bck a1-1-10">#FFFF00</button></a>
         </div>
         <div class="col-md-3">
-            <a><button class="btn a1-bck a1-2-1">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-2">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-3">BOTON #00FFFF</button></a>
-            <a><button class="btn a1-bck a1-2-4">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-5">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-6">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-7">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-8">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-9">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-2-10">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-2-1">#80FF00</button></a>
+            <a><button class="btn a1-bck a1-2-2">#00FF40</button></a>
+            <a><button class="btn a1-bck a1-2-3">#00FFFF</button></a>
+            <a><button class="btn a1-bck a1-2-4">#0080C0</button></a>
+            <a><button class="btn a1-bck a1-2-5">#8080C0</button></a>
+            <a><button class="btn a1-bck a1-2-6">#FF00FF</button></a>
+            <a><button class="btn a1-bck a1-2-7">#804040</button></a>
+            <a><button class="btn a1-bck a1-2-8">#FF8040</button></a>
+            <a><button class="btn a1-bck a1-2-9">#00FF00</button></a>
+            <a><button class="btn a1-bck a1-2-10">#008080</button></a>
         </div>
         <div class="col-md-3">
-            <a><button class="btn a1-bck a1-3-1">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-2">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-3">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-4">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-5">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-6">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-7">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-8">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-9">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-3-10">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-3-1">#004080</button></a>
+            <a><button class="btn a1-bck a1-3-2">#8080FF</button></a>
+            <a><button class="btn a1-bck a1-3-3">#800040</button></a>
+            <a><button class="btn a1-bck a1-3-4">#FF0080</button></a>
+            <a><button class="btn a1-bck a1-3-5">#800000</button></a>
+            <a><button class="btn a1-bck a1-3-6">#FF8000</button></a>
+            <a><button class="btn a1-bck a1-3-7">#008000</button></a>
+            <a><button class="btn a1-bck a1-3-8">#008040</button></a>
+            <a><button class="btn a1-bck a1-3-9">#0000FF</button></a>
+            <a><button class="btn a1-bck a1-3-10">#0000A0</button></a>
         </div>
         <div class="col-md-3">
-            <a><button class="btn a1-bck a1-4-1">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-2">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-3">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-4">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-5">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-6">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-7">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-8">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-9">Boton dark yellow</button></a>
-            <a><button class="btn a1-bck a1-4-10">Boton dark yellow</button></a>
+            <a><button class="btn a1-bck a1-4-1">#800080</button></a>
+            <a><button class="btn a1-bck a1-4-2">#8000FF</button></a>
+            <a><button class="btn a1-bck a1-4-3">#400000</button></a>
+            <a><button class="btn a1-bck a1-4-4">#804000</button></a>
+            <a><button class="btn a1-bck a1-4-5">#004000</button></a>
+            <a><button class="btn a1-bck a1-4-6">#004040</button></a>
+            <a><button class="btn a1-bck a1-4-7">#000080</button></a>
+            <a><button class="btn a1-bck a1-4-8">#000040</button></a>
+            <a><button class="btn a1-bck a1-4-9">#400040</button></a>
+            <a><button class="btn a1-bck a1-4-10">#400080</button></a>
 
         </div>
     </div>
@@ -95,6 +97,57 @@
 
 <div id="a2" class="tabcontent text-xs-center">
     <h3>BOTONES COLORFULL DARK</h3>
+    <div class="row">
+        <div class="col-md-3">
+            <a><button class="btn a2-bck a2-1-1">#FF8080</button></a>
+            <a><button class="btn a2-bck a2-1-2">#FFFF80</button></a>
+            <a><button class="btn a2-bck a2-1-3">#80FF80</button></a>
+            <a><button class="btn a2-bck a2-1-4">#00FF80</button></a>
+            <a><button class="btn a2-bck a2-1-5">#80FFFF</button></a>
+            <a><button class="btn a2-bck a2-1-6">#0080FF</button></a>
+            <a><button class="btn a2-bck a2-1-7">#FF80C0</button></a>
+            <a><button class="btn a2-bck a2-1-8">#FF80FF</button></a>
+            <a><button class="btn a2-bck a2-1-9">#FF0000</button></a>
+            <a><button class="btn a2-bck a2-1-10">#FFFF00</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a2-bck a2-2-1">#80FF00</button></a>
+            <a><button class="btn a2-bck a2-2-2">#00FF40</button></a>
+            <a><button class="btn a2-bck a2-2-3">#00FFFF</button></a>
+            <a><button class="btn a2-bck a2-2-4">#0080C0</button></a>
+            <a><button class="btn a2-bck a2-2-5">#8080C0</button></a>
+            <a><button class="btn a2-bck a2-2-6">#FF00FF</button></a>
+            <a><button class="btn a2-bck a2-2-7">#804040</button></a>
+            <a><button class="btn a2-bck a2-2-8">#FF8040</button></a>
+            <a><button class="btn a2-bck a2-2-9">#00FF00</button></a>
+            <a><button class="btn a2-bck a2-2-10">#008080</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a2-bck a2-3-1">#004080</button></a>
+            <a><button class="btn a2-bck a2-3-2">#8080FF</button></a>
+            <a><button class="btn a2-bck a2-3-3">#800040</button></a>
+            <a><button class="btn a2-bck a2-3-4">#FF0080</button></a>
+            <a><button class="btn a2-bck a2-3-5">#800000</button></a>
+            <a><button class="btn a2-bck a2-3-6">#FF8000</button></a>
+            <a><button class="btn a2-bck a2-3-7">#008000</button></a>
+            <a><button class="btn a2-bck a2-3-8">#008040</button></a>
+            <a><button class="btn a2-bck a2-3-9">#0000FF</button></a>
+            <a><button class="btn a2-bck a2-3-10">#0000A0</button></a>
+        </div>
+        <div class="col-md-3">
+            <a><button class="btn a2-bck a2-4-1">#800080</button></a>
+            <a><button class="btn a2-bck a2-4-2">#8000FF</button></a>
+            <a><button class="btn a2-bck a2-4-3">#400000</button></a>
+            <a><button class="btn a2-bck a2-4-4">#804000</button></a>
+            <a><button class="btn a2-bck a2-4-5">#004000</button></a>
+            <a><button class="btn a2-bck a2-4-6">#004040</button></a>
+            <a><button class="btn a2-bck a2-4-7">#000080</button></a>
+            <a><button class="btn a2-bck a2-4-8">#000040</button></a>
+            <a><button class="btn a2-bck a2-4-9">#400040</button></a>
+            <a><button class="btn a2-bck a2-4-10">#400080</button></a>
+
+        </div>
+    </div>
 </div>
 
 <div id="a3" class="tabcontent">
