redimencion de botones

--- a/static/css/a2.css
+++ b/static/css/a2.css
@@ -1,9 +1,10 @@
 /* Margen para los botones */
 
 #a2 button {
-    margin-top: 6px;
-    margin-bottom: 6px;
-    width: 165px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    width: 180px;
+    padding: 10px;
 }
 
 
