--- a/templates/diseños.html
+++ b/templates/diseños.html
@@ -36,6 +36,7 @@
     <button class="tablinks" onclick="openTab(event, 'a13')">Botones wtf</button>
     <button class="tablinks" onclick="openTab(event, 'a14')">Botones wtf</button>
     <button class="tablinks" onclick="openTab(event, 'a15')">Botones xp</button>
+    <button class="tablinks" onclick="openTab(event, 'a15')">Botones xp</button>
 </div>
 
 
@@ -43,8 +44,8 @@
 <div id="a1" class="tabcontent text-xs-center">
     <h3>BOTONES ALTO CONTRASTE</h3>
     <div class="row">
-        <div class="col-md-3">
-            <a><button class="btn a1-bck a1-1-1">#FF8080</button></a>
+        <div class="col-md-4">
+            <a><button class="btn a1-bck a1-1-1">LightCoral</button></a>
             <a><button class="btn a1-bck a1-1-2">#FFFF80</button></a>
             <a><button class="btn a1-bck a1-1-3">#80FF80</button></a>
             <a><button class="btn a1-bck a1-1-4">#00FF80</button></a>
@@ -52,10 +53,8 @@
             <a><button class="btn a1-bck a1-1-6">#0080FF</button></a>
             <a><button class="btn a1-bck a1-1-7">#FF80C0</button></a>
             <a><button class="btn a1-bck a1-1-8">#FF80FF</button></a>
-            <a><button class="btn a1-bck a1-1-9">#FF0000</button></a>
-            <a><button class="btn a1-bck a1-1-10">#FFFF00</button></a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <a><button class="btn a1-bck a1-2-1">#80FF00</button></a>
             <a><button class="btn a1-bck a1-2-2">#00FF40</button></a>
             <a><button class="btn a1-bck a1-2-3">#00FFFF</button></a>
@@ -64,10 +63,9 @@
             <a><button class="btn a1-bck a1-2-6">#FF00FF</button></a>
             <a><button class="btn a1-bck a1-2-7">#804040</button></a>
             <a><button class="btn a1-bck a1-2-8">#FF8040</button></a>
-            <a><button class="btn a1-bck a1-2-9">#00FF00</button></a>
-            <a><button class="btn a1-bck a1-2-10">#008080</button></a>
+
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <a><button class="btn a1-bck a1-3-1">#004080</button></a>
             <a><button class="btn a1-bck a1-3-2">#8080FF</button></a>
             <a><button class="btn a1-bck a1-3-3">#800040</button></a>
@@ -76,77 +74,48 @@
             <a><button class="btn a1-bck a1-3-6">#FF8000</button></a>
             <a><button class="btn a1-bck a1-3-7">#008000</button></a>
             <a><button class="btn a1-bck a1-3-8">#008040</button></a>
-            <a><button class="btn a1-bck a1-3-9">#0000FF</button></a>
-            <a><button class="btn a1-bck a1-3-10">#0000A0</button></a>
-        </div>
-        <div class="col-md-3">
-            <a><button class="btn a1-bck a1-4-1">#800080</button></a>
-            <a><button class="btn a1-bck a1-4-2">#8000FF</button></a>
-            <a><button class="btn a1-bck a1-4-3">#400000</button></a>
-            <a><button class="btn a1-bck a1-4-4">#804000</button></a>
-            <a><button class="btn a1-bck a1-4-5">#004000</button></a>
-            <a><button class="btn a1-bck a1-4-6">#004040</button></a>
-            <a><button class="btn a1-bck a1-4-7">#000080</button></a>
-            <a><button class="btn a1-bck a1-4-8">#000040</button></a>
-            <a><button class="btn a1-bck a1-4-9">#400040</button></a>
-            <a><button class="btn a1-bck a1-4-10">#400080</button></a>
 
         </div>
+
     </div>
 </div>
 
 <div id="a2" class="tabcontent text-xs-center">
-    <h3>BOTONES COLORFULL DARK</h3>
+    <h3 class="my-2">BOTONES COLORFULL DARK</h3>
     <div class="row">
-        <div class="col-md-3">
-            <a><button class="btn a2-bck a2-1-1">#FF8080</button></a>
-            <a><button class="btn a2-bck a2-1-2">#FFFF80</button></a>
-            <a><button class="btn a2-bck a2-1-3">#80FF80</button></a>
-            <a><button class="btn a2-bck a2-1-4">#00FF80</button></a>
-            <a><button class="btn a2-bck a2-1-5">#80FFFF</button></a>
-            <a><button class="btn a2-bck a2-1-6">#0080FF</button></a>
-            <a><button class="btn a2-bck a2-1-7">#FF80C0</button></a>
-            <a><button class="btn a2-bck a2-1-8">#FF80FF</button></a>
-            <a><button class="btn a2-bck a2-1-9">#FF0000</button></a>
-            <a><button class="btn a2-bck a2-1-10">#FFFF00</button></a>
-        </div>
-        <div class="col-md-3">
-            <a><button class="btn a2-bck a2-2-1">#80FF00</button></a>
-            <a><button class="btn a2-bck a2-2-2">#00FF40</button></a>
-            <a><button class="btn a2-bck a2-2-3">#00FFFF</button></a>
-            <a><button class="btn a2-bck a2-2-4">#0080C0</button></a>
-            <a><button class="btn a2-bck a2-2-5">#8080C0</button></a>
-            <a><button class="btn a2-bck a2-2-6">#FF00FF</button></a>
-            <a><button class="btn a2-bck a2-2-7">#804040</button></a>
-            <a><button class="btn a2-bck a2-2-8">#FF8040</button></a>
-            <a><button class="btn a2-bck a2-2-9">#00FF00</button></a>
-            <a><button class="btn a2-bck a2-2-10">#008080</button></a>
-        </div>
-        <div class="col-md-3">
-            <a><button class="btn a2-bck a2-3-1">#004080</button></a>
-            <a><button class="btn a2-bck a2-3-2">#8080FF</button></a>
-            <a><button class="btn a2-bck a2-3-3">#800040</button></a>
-            <a><button class="btn a2-bck a2-3-4">#FF0080</button></a>
-            <a><button class="btn a2-bck a2-3-5">#800000</button></a>
-            <a><button class="btn a2-bck a2-3-6">#FF8000</button></a>
-            <a><button class="btn a2-bck a2-3-7">#008000</button></a>
-            <a><button class="btn a2-bck a2-3-8">#008040</button></a>
-            <a><button class="btn a2-bck a2-3-9">#0000FF</button></a>
-            <a><button class="btn a2-bck a2-3-10">#0000A0</button></a>
-        </div>
-        <div class="col-md-3">
-            <a><button class="btn a2-bck a2-4-1">#800080</button></a>
-            <a><button class="btn a2-bck a2-4-2">#8000FF</button></a>
-            <a><button class="btn a2-bck a2-4-3">#400000</button></a>
-            <a><button class="btn a2-bck a2-4-4">#804000</button></a>
-            <a><button class="btn a2-bck a2-4-5">#004000</button></a>
-            <a><button class="btn a2-bck a2-4-6">#004040</button></a>
-            <a><button class="btn a2-bck a2-4-7">#000080</button></a>
-            <a><button class="btn a2-bck a2-4-8">#000040</button></a>
-            <a><button class="btn a2-bck a2-4-9">#400040</button></a>
-            <a><button class="btn a2-bck a2-4-10">#400080</button></a>
+        <div class="col-md-4">
+            <a><button class="btn a2-bck a2-1-1">COLOR 000</button></a>
+            <a><button class="btn a2-bck a2-1-2">COLOR 015</button></a>
+            <a><button class="btn a2-bck a2-1-3">COLOR 030</button></a>
+            <a><button class="btn a2-bck a2-1-4">COLOR 045</button></a>
+            <a><button class="btn a2-bck a2-1-5">COLOR 060</button></a>
+            <a><button class="btn a2-bck a2-1-6">COLOR 075</button></a>
+            <a><button class="btn a2-bck a2-1-7">COLOR 090</button></a>
+            <a><button class="btn a2-bck a2-1-8">COLOR 105</button></a>
 
         </div>
+        <div class="col-md-4">
+            <a><button class="btn a2-bck a2-2-1">COLOR 120</button></a>
+            <a><button class="btn a2-bck a2-2-2">COLOR 135</button></a>
+            <a><button class="btn a2-bck a2-2-3">COLOR 150</button></a>
+            <a><button class="btn a2-bck a2-2-4">COLOR 165</button></a>
+            <a><button class="btn a2-bck a2-2-5">COLOR 180</button></a>
+            <a><button class="btn a2-bck a2-2-6">COLOR 195</button></a>
+            <a><button class="btn a2-bck a2-2-7">COLOR 210</button></a>
+            <a><button class="btn a2-bck a2-2-8">COLOR 225</button></a>
+
+        </div>
+        <div class="col-md-4">
+            <a><button class="btn a2-bck a2-3-1">COLOR 240</button></a>
+            <a><button class="btn a2-bck a2-3-2">COLOR 255</button></a>
+            <a><button class="btn a2-bck a2-3-3">COLOR 270</button></a>
+            <a><button class="btn a2-bck a2-3-4">COLOR 285</button></a>
+            <a><button class="btn a2-bck a2-3-5">COLOR 300</button></a>
+            <a><button class="btn a2-bck a2-3-6">COLOR 315</button></a>
+            <a><button class="btn a2-bck a2-3-7">COLOR 330</button></a>
+            <a><button class="btn a2-bck a2-3-8">COLOR 345</button></a>
+        </div>
+
     </div>
 </div>
 
